--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,36 @@
+annotated-types==0.5.0
 beautifulsoup4==4.12.2
+blis==0.7.10
+catalogue==2.0.9
 certifi==2023.7.22
 charset-normalizer==3.2.0
+click==8.1.7
 colorama==0.4.6
+confection==0.1.1
 contourpy==1.1.0
 cycler==0.11.0
+cymem==2.0.7
 docopt==0.6.2
 fonttools==4.42.1
 idna==3.4
+Jinja2==3.1.2
 joblib==1.3.2
 kiwisolver==1.4.5
+langcodes==3.3.0
+MarkupSafe==2.1.3
 matplotlib==3.7.2
+murmurhash==1.0.9
 numpy==1.25.2
 opencv-python==4.8.0.76
 packaging==23.1
 pandas==2.0.3
+pathy==0.10.2
 Pillow==10.0.0
 pipreqs==0.4.13
+pl-core-news-md==3.6.0
+preshed==3.0.8
+pydantic==2.3.0
+pydantic_core==2.6.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
@@ -23,10 +38,19 @@ requests==2.31.0
 scikit-learn==1.3.0
 scipy==1.11.2
 six==1.16.0
+smart-open==6.3.0
 soupsieve==2.4.1
+spacy==3.6.1
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+srsly==2.4.7
+thinc==8.1.12
 threadpoolctl==3.2.0
 tqdm==4.66.1
+typer==0.9.0
+typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.4
+wasabi==1.1.2
 yarg==0.1.9
 https://github.com/explosion/spacy-models/releases/download/pl_core_news_md-3.6.0/pl_core_news_md-3.6.0.tar.gz
