--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 annotated-types==0.5.0
+asttokens==2.2.1
+backcall==0.2.0
 beautifulsoup4==4.12.2
 blis==0.7.10
 catalogue==2.0.9
@@ -6,33 +8,53 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
+comm==0.1.4
 confection==0.1.1
 contourpy==1.1.0
 cycler==0.11.0
 cymem==2.0.7
+debugpy==1.6.7.post1
+decorator==5.1.1
 docopt==0.6.2
+executing==1.2.0
 fonttools==4.42.1
 idna==3.4
+ipykernel==6.25.1
+ipython==8.14.0
+jedi==0.19.0
 Jinja2==3.1.2
 joblib==1.3.2
+jupyter_client==8.3.0
+jupyter_core==5.3.1
 kiwisolver==1.4.5
 langcodes==3.3.0
 MarkupSafe==2.1.3
 matplotlib==3.7.2
+matplotlib-inline==0.1.6
 murmurhash==1.0.9
+nest-asyncio==1.5.7
 numpy==1.25.2
 opencv-python==4.8.0.76
 packaging==23.1
 pandas==2.0.3
+parso==0.8.3
 pathy==0.10.2
+pickleshare==0.7.5
 Pillow==10.0.0
 pipreqs==0.4.13
+platformdirs==3.10.0
 preshed==3.0.8
+prompt-toolkit==3.0.39
+psutil==5.9.5
+pure-eval==0.2.2
 pydantic==2.3.0
 pydantic_core==2.6.3
+Pygments==2.16.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
+pywin32==306
+pyzmq==25.1.1
 requests==2.31.0
 scikit-learn==1.3.0
 scipy==1.11.2
@@ -43,13 +65,18 @@ spacy==3.6.1
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
 srsly==2.4.7
+stack-data==0.6.2
 thinc==8.1.12
 threadpoolctl==3.2.0
+tornado==6.3.3
 tqdm==4.66.1
+traitlets==5.9.0
 typer==0.9.0
 typing_extensions==4.7.1
 tzdata==2023.3
+Unidecode==1.3.6
 urllib3==2.0.4
 wasabi==1.1.2
+wcwidth==0.2.6
 yarg==0.1.9
 https://github.com/explosion/spacy-models/releases/download/pl_core_news_md-3.6.0/pl_core_news_md-3.6.0.tar.gz
